    * 4914 FIX: statgrab_mem: Plugin is now prioritized over solaris_mem if both is available...
    * 4915 FIX: solaris_mem: Unified graphs and Per-O-Meter with common memory checks...
    * 4887 FIX: cisco_wlc: Fixed crashing check plugin caused by IndexError
    * 4972 FIX: mk_inventory.aix: Use MK_VARDIR instead of MK_CONFDIR for the state file

    Multisite:
    * 4902 SEC: Monitoring history views: Fixed possible XSS when displaying "plugin output"...

    HW/SW-Inventory:
    * 4878 FIX: lnx_distro: Fixed wrong detected distribution name, vendor and version...


1.2.8p24:
    Checks & Agents:
    * 4636 Added compatibility for Lenovo blades...
    * 4637 FIX: blade_blades: Fixed buggy state validation
    * 4788 FIX: openhardwaremonitor: New support of current hardware...
    * 4789 FIX: check_mk_agent.aix: Fixed computation of uptime...
    * 4772 FIX: cisco_wlc, cisco_wlc_clients: Added support for Cisco 1850 devices
    * 4790 FIX: Fixed scaling for the average in interface services of pnp4nagios graphs...
    * 4634 FIX: aix_if: Make check work with different ifconfig output format...
    * 4774 FIX: wmi_cpuload: Expanded missing information handling
    * 4635 FIX: raritan_emx_sensors.temp, raritan_px_sensors: Fix checks for Nagios core, add missing WATO rule to raritan_px_sensors
    * 4775 FIX: fortigate_sessions: Improved missing or invalid output handling
    * 4792 FIX: Fixed wrong unit in graph for tape utilization...
    * 4777 FIX: esx_vsphere_sensors: Fixed wrong interpretation of ESX sensor health state 'UNKNOWN'
    * 4793 FIX: chrony: Changed to raw IP address without dns name to avoid empty output...
    * 4794 FIX: check_mk_agent.solaris: Now considers top in /usr/bin/ and /usr/local/bin/
    * 4778 FIX: lnx_quotas: Adapted plugin output if TABS are used in fstab
    * 4795 FIX: netstat: Fixed wrong output if LISTENING connections should be monitored on Ubuntu...