@@ -1,0 +1,11 @@
+Title: mssql_counters.file_sizes: Added readable titles of related metrics
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p25
+Date: 1500891539
+Class: fix
+
+Previously the titles of the metrics 'data_files', 'log_files_used'
+and 'log_files' were generated automatically and were not readable.
+Now they have readable titles.
