@@ -19,6 +19,7 @@
     * 4915 FIX: solaris_mem: Unified graphs and Per-O-Meter with common memory checks...
     * 4887 FIX: cisco_wlc: Fixed crashing check plugin caused by IndexError
     * 4972 FIX: mk_inventory.aix: Use MK_VARDIR instead of MK_CONFDIR for the state file
+    * 4980 FIX: mssql_counters.file_sizes: Added readable titles of related metrics...
 
     Multisite:
     * 4902 SEC: Monitoring history views: Fixed possible XSS when displaying "plugin output"...
